# listenbrainz_player

./: README.md  flake.nix  pyproject.toml
lb/: __init__.py  api.py  cache.py  config.py  player.py  tui.py
