[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lb"
version = "0.1.0"
description = "ListenBrainz TUI music player"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "mobsenpai"}]
dependencies = [
    "requests",
    "yt-dlp",
    "prompt-toolkit",
]
requires-python = ">=3.9"

[project.scripts]
lb = "lb.tui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lb*"]
